# zennix

./: .gitignore  README.md  pyproject.toml  setup.py
zennix/: cli.py
zennix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
zennix/commands/: generate.py  scan.py
zennix/core/: project_metadata.py  project_scanner.py  readme.py
zennix/core/folder_scanner/: __init__.py
zennix/modules/: project_metadata.py  readme.py  scanner.py
zennix/utils/: file_ops.py
